@@ -29,6 +29,7 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import org.apache.solr.cloud.api.collections.CollectionHandlingUtils.ShardRequestTracker;
 import org.apache.solr.common.SolrException;
@@ -68,6 +69,7 @@ public class BackupCmd implements CollApiCmds.CollectionApiCommand {
     this.ccc = ccc;
   }
 
+  @SuppressWarnings("unchecked")
   @Override
   public void call(ClusterState state, ZkNodeProps message, NamedList<Object> results)
       throws Exception {
@@ -91,8 +93,11 @@ public class BackupCmd implements CollApiCmds.CollectionApiCommand {
             .getCollection(collectionName)
             .getConfigName();
 
+    Map<String, String> customProps = (Map<String, String>) message.get("extraProperties");
+
     BackupProperties backupProperties =
-        BackupProperties.create(backupName, collectionName, extCollectionName, configName);
+        BackupProperties.create(
+            backupName, collectionName, extCollectionName, configName, customProps);
 
     CoreContainer cc = ccc.getCoreContainer();
     try (BackupRepository repository = cc.newBackupRepository(repo)) {
@@ -367,6 +372,9 @@ public class BackupCmd implements CollApiCmds.CollectionApiCommand {
     }
     aggRsp.add("indexVersion", backupProps.getIndexVersion());
     aggRsp.add("startTime", backupProps.getStartTime());
+    if (backupProps.getExtraProperties() != null) {
+      aggRsp.add("extraProperties", backupProps.getExtraProperties());
+    }
 
     // Optional options for backups
     Optional<Integer> indexFileCount = Optional.empty();
